Updates from Overleaf

--- a/template-tcc.tex
+++ b/template-tcc.tex
@@ -1,12 +1,12 @@
 %%
 %% Template de TCC para os cursos do Centro Universitário SENAC
 %% Desenvolvido por Daniel de Mello Viero <daniel.viero@gmail.com> 
-%% em jan/2019 e cedido à instituição.
+%% em jan/2019 e cedido à comunidade.
 %%
 \documentclass[]{senac-tcc}
 
 % ---
-% Pacotes adicionais, usados apenas no âmbito do Modelo Canônico do abnteX2
+% Pacotes adicionais, usados apenas para o template
 % ---
 \usepackage{lipsum}				% para geração de dummy text
 % ---
@@ -21,9 +21,9 @@
 % ---
 \titulo{Título do Trabalho}
 \autor{Nome do Aluno}
-\curso{\textit{Cloud Computing}}
-\local{Brasília, DF}
-\data{2019}
+\curso{Nome do Curso}
+\local{São Paulo}
+\data{XXXX}
 \orientador{Nome do mediador}
 %\coorientador{Nome do co-orientador, se aplicável}
 % ---
@@ -99,9 +99,9 @@
 % Inserir a ficha bibliografica
 % ---
 
-% A biblioteca da sua universidade lhe fornecerá um PDF
-% com a ficha catalográfica definitiva após a defesa do trabalho. Quando estiver
-% com o documento, salve-o como PDF no diretório do seu projeto e use o comando abaixo:
+% Gere um arquivo PDF da ficha catalográfica no site da Biblioteca do SENAC, 
+% no link http://www.sp.senac.br/jsp/default.jsp?template=2202.dwt&testeira=386.
+% Substitua o arquivo exemplo usado aqui.
 %
 \begin{fichacatalografica}
     \includepdf{fichacatalografica.pdf}
