Ajuste do conteúdo do template conforme modelo do SENAC.

--- a/referencias.bib
+++ b/referencias.bib
@@ -1,4 +1,6 @@
 
+%% Coloque aqui suas referências no formato bibtex.
+
 %MASCARENHAS, Sidnei A. (Org.) Metodologia científica. São Paulo: Pearson Education do Brasil, 2012.
 @book{mascarenhas_2012,
 	Address={São Paulo},
